apps/arena-landing-page/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arena-landing-page-deployment
  labels:
    app: arena-landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arena-landing-page
  template:
    metadata:
      labels:
        app: arena-landing-page
    spec:
      containers:
        - name: arena-landing-page
          image: 005165627580.dkr.ecr.eu-west-1.amazonaws.com/arena/landing-page:0.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
