apps/arena-landing-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arena-landing-page-service
  labels:
    app: arena-landing-page
spec:
  type: ClusterIP
  selector:
    app: arena-landing-page
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
